# physics-engine

./: CMakeLists.txt  README.md  build.sh  setup.sh
examples/: collision_demo.cpp  console_demo.cpp  graphics_demo.cpp  quadtree_demo.cpp
include/: AABB.h  Circle.h  CollisionDetector.h  ForceGenerator.h  ForceGenerator.hpp  Matrix2D.h  PhysicsWorld.h  PhysicsWorld.hpp  Polygon.h  Quadtree.h  RigidBody.h  RigidBody.hpp  Utility.h  Vector2D.h  Vector2D.hpp
physics-engine/: build.sh  physics_engine.h
physics-engine.xcodeproj/: project.pbxproj
physics-engine.xcodeproj/xcuserdata/ahennig.xcuserdatad/xcschemes/: xcschememanagement.plist
physics-engine/examples/: console_demo.cpp
physics-engine/include/: CollisionDetector.hpp  ForceGenerator.hpp  PhysicsWorld.hpp  RigidBody.hpp  Vector2D.hpp
physics-engine/physics_engine.docc/: physics_engine.md
physics-engine/src/: RigidBody.cpp  Vector2D.cpp
src/: AABB.cpp  Circle.cpp  CollisionDetector.cpp  ForceGenerator.cpp  Matrix2D.cpp  PhysicsWorld.cpp  Polygon.cpp  Quadtree.cpp  RigidBody.cpp  Utility.cpp  Vector2D.cpp
